--- a/source/_posts/2014-04-13-charter.markdown
+++ b/source/_posts/2014-04-13-charter.markdown
@@ -9,7 +9,7 @@ categories:
 ##Project Charter
 
 Project Overview – Describe the project briefly in layman’s terms (one that your grandmother could understand). This should not be more than a few sentences.
-
+<!--more-->
 Project Approach – Provide more technical detail (one that other students could understand). List the team members and their roles.
 
 Project Objectives, Milestones and Major Deliverables – List your objectives and milestones without getting too detailed (you will do that later). What are the specific goals of the project for this quarter? What are potential longer term goals? Deliverables should include a description, a date, and the persons who are responsible.
