Chris can't spell.

--- a/source/_posts/2014-04-13-charter.markdown
+++ b/source/_posts/2014-04-13-charter.markdown
@@ -12,7 +12,7 @@ Otto is your personalized, robot bartender. Simply send a drink order to Otto fr
 <!--more-->
 ### Our Approach – Otto
 
-Otto has three key components: the liquor, the mixers, and the glass. The liquor will be gravity fed and regulated via solenoids hooked up to the Arduino. The mixers are a little trickier since by and large they need to be refrigerated. To address this, we'll keep the mixers in a minifridge beneath the main unit (where they are also regulated by solenoids) and pumped upwards by a powerful peristaltic pump. The glass will idealy remain stationary and be fed by the appropriate tubes.
+Otto has three key components: the liquor, the mixers, and the glass. The liquor will be gravity fed and regulated via solenoids hooked up to the Arduino. The mixers are a little trickier since by and large they need to be refrigerated. To address this, we'll keep the mixers in a minifridge beneath the main unit (where they are also regulated by solenoids) and pumped upwards by a powerful peristaltic pump. The glass will ideally remain stationary and be fed by the appropriate tubes.
 
 On the software side of things, the Arduino will be hooked up to a Raspberry Pi functioning as a server running node.js. Here we'll host a website that allows users to order their drinks and interface with Otto easily and conveniently.
 
@@ -20,7 +20,7 @@ The team members are Rustin Manafian, Chris Weller, and Ryne Chaloux. Everyone o
 
 ### Objectives, Milestones and the "What" of Otto
 
-Ideally by the end of our 10 week sprint, we'd like to have a deliverable, bartending robot capable of making basic cocktails and getting you drunk for $500 or less. A rough outline of what this might entail on the production side of things would be to start by opening and closing the valves, get excited once we've figured out how to rig up all the mixers, and offer up a toast once our first shot's been poured.
+Ideally by the end of our 10 week sprint, we'd like to have a deliverable, bar tending robot capable of making basic cocktails and getting you drunk for $500 or less. A rough outline of what this might entail on the production side of things would be to start by opening and closing the valves, get excited once we've figured out how to rig up all the mixers, and offer up a toast once our first shot's been poured.
 
 Any potential long term goals would be centered around getting the user liquored up faster, cheaper, and in a more stylish way.
 
@@ -34,7 +34,7 @@ We will all be held equally responsible for this.
 
 Seeing as none of us have taken on a hardware project of this stature, simply learning all the necessary components of circuit design and implementation is one such risk taken with this project. However, after a cursory search when we came up with the project (and now further in, having been entrenched in hardware design for the past 3 weeks), we have determined that while ambitious, this project is feasible. 
 
-Other potential stumbling blocks include lack of viable suppliers or back ordered supplies, tight budgets, design issues such as where and how to mount what, and various things of that nature. Thankfully we've already mitigated most of these concerns. We've set a soft budge we've all agreed upon of roughly $500, we've bought and sourced parts from local suppliers, and we're actively consulting people with lightyears more experience than us in the food safe hardware field.
+Other potential stumbling blocks include lack of viable suppliers or back ordered supplies, tight budgets, design issues such as where and how to mount what, and various things of that nature. Thankfully we've already mitigated most of these concerns. We've set a soft budge we've all agreed upon of roughly $500, we've bought and sourced parts from local suppliers, and we're actively consulting people with light years more experience than us in the food safe hardware field.
 
 ##Group Management
 
@@ -48,11 +48,11 @@ Decisions will be made by consensus. An odd number ensures tie breaking, and if 
 
 **How will you communicate? Email, meetings in the lab, discussion board?**
 
-We will communicate through Google Hangouts and texting on top of meeting in person once or more a week as needed. We're all guaranteed to be on campus at various times throughout the week, and we've set up a Google Calandar that reflects this.
+We will communicate through Google Hangouts and texting on top of meeting in person once or more a week as needed. We're all guaranteed to be on campus at various times throughout the week, and we've set up a Google Calendar that reflects this.
 
 **How will you know when you’re off schedule, and how will you deal with schedule slips?**
 
-Seeings as our milestones are laid out already, it's fairly negligable for us to check against them in our weekly meetings. If we aren't actively making progress on any one milestone from week to week, we'll know we've got a problem. Should we have schedule slips, we'll deal with them on a case by case basis.
+Seeings as our milestones are laid out already, it's fairly negligible for us to check against them in our weekly meetings. If we aren't actively making progress on any one milestone from week to week, we'll know we've got a problem. Should we have schedule slips, we'll deal with them on a case by case basis.
 
 But realistically, if Otto isn't working as we'd hoped by when we'd hoped, we'll just retroactively edit our schedule so that we can be back on schedule.
 
@@ -70,7 +70,7 @@ There are no specific roles. Everyone on the team will volunteer to do whatever 
 
 **What hardware/software will you use? What do you have available? What do you need?**
 
-We need an Adrduino, Raspberry Pi, various solenoid valves, peristaltic pump, resistors, transistors, diodes, LEDs, a power supply, a mini fridge, connecting tubing and hardware, and probably some more stuff that we'll figure out later. This is all subject to change.
+We need an Arduino, Raspberry Pi, various solenoid valves, peristaltic pump, resistors, transistors, diodes, LEDs, a power supply, a mini fridge, connecting tubing and hardware, and probably some more stuff that we'll figure out later. This is all subject to change.
 
 **If there is software/hardware that is needed, provide a justification for its cost. Where will you order it? When will it arrive?**
 
